<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="btReturn">返   回    </string>
    <string name="btIsComOpen">串口未打开</string>
    <string name="btOpenCom">端口连接</string>
    <string name="btCloseCom">关闭串口</string>
    <string name="btBeep">蜂鸣器</string>
    <string name="btLEDTest">指示灯测试</string>
    <string name="btGetVer">库版本号</string>
    <string name="btMifareOneTest">MifareOne卡测试</string>
    <string name="btTYPEACPUTest">TYPE-A-CPU卡测试</string>
    <string name="btTYPEBCPUTest">TYPE-B-CPU卡测试</string>
    <string name="btPSAMTest">PSAM卡测试</string>
    <string name="btMorePSAMTest">多张PSAM卡测试</string>
    <string name="bt15693Test">ISO15693卡测试</string>
    <string name="btSRIX4KTest">SRIX4K卡测试</string>
    <string name="btFelicaTest">Felica卡测试</string>
    <string name="btNameCardTest">二代证UID测试</string>
    <string name="RfGetVer_OK">获取版本号成功!</string>
    <string name="RfGetVer_Err">获取版本号失败!</string>
    <string name="RfLight_OK">LED灯控制成功!</string>
    <string name="RfLight_Err">LED灯控制失败!</string>
    <string name="RfBeep_OK">蜂鸣器控制成功!</string>
    <string name="RfBeep_Err">蜂鸣器控制失败!</string>
    <string name="btInitType">初始化TYPE A类型 </string>
    <string name="btRequest">寻卡 </string>
    <string name="btAntiSele">防冲突选卡</string>
    <string name="btHalt">卡休眠</string>
    <string name="btAuth">密钥认证</string>
    <string name="btReadBlock">读块</string>
    <string name="btWriteBlock">写块</string>
    <string name="btInitValue">初始化钱包</string>
    <string name="btIncValue">充值</string>
    <string name="btDecValue">扣款</string>
    <string name="btReadValue">读余额</string>
    <string name="btRestore">回传</string>
    <string name="btTransfer">备份</string>
    <string name="etStrComNo">ttyS2</string>
    <string name="etStrBaud">19200</string>
    <string name="etKeyInputHit">请输入密码......</string>
    <string name="etKeyValue">FFFFFFFFFFFF</string>
    <string name="etDataHit">数据区域......</string>
    <string name="etDataValue">00112233445566778899AABBCCDDEEFF</string>
    <string name="etPurseValueInputHit">钱包值区域......</string>
    <string name="etPurseValue">64000000</string>
    <string name="app_name">NFCCardDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    <string name="antenna_OK">天线成功!</string>
    <string name="antenna_Err">天线失败!</string>
    <string name="initType_OK">初始化类型成功!</string>
    <string name="initType_Err">初始化类型失败!</string>
    <string name="open_com_OK">串口打开成功!</string>
    <string name="open_com_Err">串口打开失败!</string>
    <string name="close_com_OK">串口关闭成功!</string>
    <string name="close_com_Err">串口关闭失败!</string>
    <string name="RfQuest_OK">寻卡成功!</string>
    <string name="RfQuest_Err">寻卡失败!</string>
    <string name="RfAnticoll_OK">防冲突成功!</string>
    <string name="RfAnticoll_Err">防冲突失败!</string>
    <string name="RfSelect_OK">选卡成功!</string>
    <string name="RfSelect_Err">选卡失败!</string>
    <string name="RfHalt_OK">卡休眠成功!</string>
    <string name="RfHalt_Err">卡休眠失败!</string>
    <string name="RfAuth_OK">卡密钥认证成功!</string>
    <string name="RfAuth_Err">卡密钥认证失败!</string>
    <string name="RfKeyLen_Err">密钥长度不正确!</string>
    <string name="RfReadBlock_OK">读卡成功!</string>
    <string name="RfReadBlock_Err">读卡失败!</string>
    <string name="RfDataLen_Err">数据长度不正确!</string>
    <string name="RfWriteBlock_OK">写卡成功!</string>
    <string name="RfWriteBlock_Err">写卡失败!</string>
    <string name="RfInitValue_OK">初始化钱包成功!</string>
    <string name="RfInitValue_Err">初始化钱包失败!</string>
    <string name="RfIncValue_OK">钱包充值成功!</string>
    <string name="RfIncValue_Err">钱包充值失败!</string>
    <string name="RfDecValue_OK">钱包减值成功!</string>
    <string name="RfDecValue_Err">钱包减值失败!</string>
    <string name="RfReadValue_OK">读钱包余额成功!</string>
    <string name="RfReadValue_Err">读钱包余额失败!</string>
    <string name="RfRestore_OK">数据回传成功!</string>
    <string name="RfRestore_Err">数据回传失败!</string>
    <string name="RfTransfer_OK">数据转移成功!</string>
    <string name="RfTransfer_Err">数据转移失败!</string>
    <string name="title_activity_com_setting">ComSetting</string>
    <string name="title_activity_mifare_one">MifareOneActivity</string>
    <string name="title_activity_iso14443_acpu">ISO14443ACPU</string>
    <string name="btTYPEACPUReset">复位</string>
    <string name="btCOSSend">发送COS命令</string>
    <string name="RfReset_OK">复位成功!</string>
    <string name="RfReset_Err">复位失败!</string>
    <string name="RfCosSend_OK">发送COS成功!</string>
    <string name="RfCosSend_Err">发送COS失败!</string>
    <string name="title_activity_psam">PSAM</string>
    <string name="title_activity_iso15693">ISO15693</string>

    <!-- ISO15693 -->
    <string name="btInventory">Inventory</string>
    <string name="btGetInformation">GetInformation</string>
    <string name="bt15693ReadBlock">ReadBlock</string>
    <string name="bt15693WriteBlock">WriteBlock</string>
    <string name="bt15693LockBlock">LockBlock</string>
    <string name="bt15693GetBlockSec">GetBlockSecurity</string>
    <string name="bt15693WriteDSFID">WriteDSFID</string>
    <string name="bt15693LockDSFID">LockDSFID</string>
    <string name="bt15693WriteAFI">WriteAFI</string>
    <string name="bt15693LcokAFI">LcokAFI</string>
    <string name="bt15693StayQuiet">StayQuiet</string>
    <string name="bt15693ResetToReady">ResetToReady</string>
    <string name="bt15693SetEAS">SetEAS</string>
    <string name="bt15693LockEAS">LockEAS</string>
    <string name="bt15693ResetEAS">ResetEAS</string>
    <string name="bt15693EASAlarm">EASAlarm</string>
    <string name="et15693DataValue">11223344</string>
    <string name="RfInventory_OK">Inventory成功!</string>
    <string name="RfInventory_Err">Inventory失败!</string>
    <string name="RfGetInformation_OK">GetInformation成功!</string>
    <string name="RfGetInformation_Err">GetInformation失败!</string>
    <string name="Rf15693ReadBlock_OK">ReadBlock成功!</string>
    <string name="Rf15693ReadBlock_Err">ReadBlock失败!</string>
    <string name="Rf15693WriteBlock_OK">WriteBlock成功!</string>
    <string name="Rf15693WriteBlock_Err">WriteBlock失败!</string>
    <string name="Rf15693LockBlock_OK">LockBlock成功!</string>
    <string name="Rf15693LockBlock_Err">LockBlock失败!</string>
    <string name="RfWriteDSFID_OK">WriteDSFID成功!</string>
    <string name="RfWriteDSFID_Err">WriteDSFID失败!</string>
    <string name="RfLockDSFID_OK">LockDSFID成功!</string>
    <string name="RfLockDSFID_Err">LockDSFID失败!</string>
    <string name="RfWriteAFI_OK">WriteAFI成功!</string>
    <string name="RfWriteAFI_Err">WriteAFI失败!</string>
    <string name="RfLcokAFI_OK">LcokAFI成功!</string>
    <string name="RfLcokAFI_Err">LcokAFI失败!</string>
    <string name="RfStayQuiet_OK">StayQuiet成功!</string>
    <string name="RfStayQuiet_Err">StayQuiet失败!</string>
    <string name="RfResetToReady_OK">ResetToReady成功!</string>
    <string name="RfResetToReady_Err">ResetToReady失败!</string>
    <string name="RfSetEAS_OK">SetEAS成功!</string>
    <string name="RfSetEAS_Err">SetEAS失败!</string>
    <string name="RfLockEAS_OK">LockEAS成功!</string>
    <string name="RfLockEAS_Err">LockEAS失败!</string>
    <string name="RfResetEAS_OK">ResetEAS成功!</string>
    <string name="RfResetEAS_Err">ResetEAS失败!</string>
    <string name="RfEASAlarm_OK">EASAlarm成功!</string>
    <string name="RfEASAlarm_Err">EASAlarm失败!</string>
    <string name="title_activity_felica">Felica</string>
    <string name="RfFelica_OK">Felica寻卡成功!</string>
    <string name="RfFelica_Err">Felica寻卡失败!</string>
    <string name="title_activity_name_card">NameCard</string>
    <string name="RfNameCard_OK">二代证寻卡成功!</string>
    <string name="RfNameCard_Err">二代证寻卡失败!</string>
    
    <string name="RfInputPara_Err">输入参数失败!</string>
</resources>
