<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Felica" 
    android:orientation="vertical">
	<Button
      android:id="@+id/btnInitType"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/btInitType" />  
   <Button
      android:id="@+id/btnRequest"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/btRequest" />  
     <Button
	      android:id="@+id/btnReturn"
	      style="?android:attr/buttonStyleSmall"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:text="@string/btReturn" />
      <TextView
	        android:id="@+id/TextViewInfo"
	        android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:layout_weight="0.02"
	        android:background="#000000"
	        android:inputType="textMultiLine"
	        android:text="输出信息"
	        android:textColor="#FFFFFF" />

	    <TextView
	        android:id="@+id/tvResult"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_weight="0.19"
	        android:background="#000000"
	        android:inputType="textMultiLine"
	        android:text="输出信息"
	        android:textColor="#FFFFFF" />

</LinearLayout>
