<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MorePSAM" 
    android:orientation="vertical"> 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > 
        <TextView
	        android:id="@+id/TVPSAMNo"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
	        android:layout_weight="0.02"
	        android:textSize="20dp"
	        android:text="卡编号（1-6）" />

        <EditText
            android:id="@+id/etPsamNo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.44"
            android:text="01"
            android:textSize="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > 
        <TextView
	        android:id="@+id/TVPSAMBaud"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
	        android:layout_weight="0.02"
	        android:textSize="20dp"
	        android:text="波特率9600/38400" />
        <EditText
	        android:id="@+id/etPsamBaud"
	        android:layout_width="wrap_content"
	        android:layout_height="50dp"  
	        android:layout_weight="0.44"   
	        android:textSize="20dp"
	        android:text="9600" />
    </LinearLayout>
 <EditText
        android:id="@+id/etCosInput"
        android:layout_width="fill_parent"
        android:layout_height="60dp"  
        android:layout_weight="0.44"   
        android:ems="10"
        android:inputType="textMultiLine" 
        android:text="0084000008" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" > 
        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp" 
            android:text="@string/btTYPEACPUReset"  /> 
        <Button
            android:id="@+id/btnCosSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp" 
            android:text="@string/btCOSSend"  /> 
    </LinearLayout>
    <EditText
        android:id="@+id/etResult"
        android:layout_width="fill_parent"
        android:layout_height="100dp"  
        android:layout_weight="0.44"   
        android:ems="10"
        android:inputType="textMultiLine" 
        android:text="" />
    <Button
	      android:id="@+id/btnReturn"
	      style="?android:attr/buttonStyleSmall"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:text="@string/btReturn" />
	    <TextView
	        android:id="@+id/TextViewInfo"
	        android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:layout_weight="0.02"
	        android:background="#000000"
	        android:inputType="textMultiLine"
	        android:text="输出信息"
	        android:textColor="#FFFFFF" />

	    <TextView
	        android:id="@+id/tvResult"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_weight="0.19"
	        android:background="#000000"
	        android:inputType="textMultiLine"
	        android:text="输出信息"
	        android:textColor="#FFFFFF" />
</LinearLayout>
